k8s_manifests/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: web3app
  labels:
    app: client
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 376801182676.dkr.ecr.eu-north-1.amazonaws.com/web3/client:web3-client
      ports:
      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: web3app
spec:
  selector:
    app: client
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
