k8s_manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: web3app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: ab492fb2f6d9840a69eb4c0c3e04bda8-afd03f1f5d11083b.elb.eu-north-1.amazonaws.com
      http:
        paths:
          - path: /smart-contract
            pathType: Prefix
            backend:
              service:
                name: smart-contract-service
                port:   
                  number: 8545 #experimental
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port: 
                  number: 80
